--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8"/>
-    <title>React Transform Boilerplate Test</title>
+    <title>React Transform Boilerplate</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
   <body>
